# python-mincut

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
graphs/: skip_node.metis
pymincut/: cm_disconnected1.py  example2.py  pygraph.py  ring_of_cliques.py
src/: Graph.py  example.py  example2.py  graph.py  main.cpp  mincut_wrapper.cpp  pygraph.py  quick_run.sh  test.py
tests/: cm_disconnected1.py  example.py  example2.py  mins_test.py  multi_disconnected.py  ring_of_cliques.py
